--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development npx webpack --config webpack.config.js --mode development",
     "build:prod": "cross-env NODE_ENV=production npx webpack --config webpack.config.js --mode production",
-    "dev": "cross-env NODE_ENV=development npx webpack-dev-server --mode development",
+    "dev": "cross-env NODE_ENV=development node ./bin/development.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,16 +28,20 @@
   },
   "homepage": "https://github.com/dm-webdev/skillbox-react#readme",
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "path": "^0.12.7",
+    "react-hot-loader": "^4.12.21",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
