--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@hot-loader/react-dom": "^16.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^4.3.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "path": "^0.12.7",
     "react-hot-loader": "^4.12.21",
+    "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
@@ -45,9 +47,12 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
+    "@types/jest": "^26.0.13",
     "express": "^4.17.1",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "ts-jest": "^26.3.0"
   }
 }
