--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^4.3.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "path": "^0.12.7",
+    "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
@@ -40,7 +42,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/jest": "^26.0.13",
+    "jest": "^26.4.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "ts-jest": "^26.3.0"
   }
 }
