--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@types/jest": "^26.0.13",
+    "@types/react": "^16.9.49",
     "express": "^4.17.1",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
