--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
+    "file-loader": "^6.1.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "path": "^0.12.7",
@@ -49,11 +50,13 @@
   "dependencies": {
     "@types/jest": "^26.0.13",
     "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "express": "^4.17.1",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-favicon": "0.0.18",
     "ts-jest": "^26.3.0"
   }
 }
