--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@types/jest": "^26.0.13",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "classnames": "^2.2.6",
     "express": "^4.17.1",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
