--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "cross-env NODE_ENV=development npx webpack --config webpack.config.js --mode development",
     "build:prod": "cross-env NODE_ENV=production npx webpack --config webpack.config.js --mode production",
     "dev": "cross-env NODE_ENV=development node ./bin/development.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,17 +29,26 @@
   "homepage": "https://github.com/dm-webdev/skillbox-react#readme",
   "devDependencies": {
     "@hot-loader/react-dom": "^16.13.0",
+    "@types/classnames": "^2.2.11",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "file-loader": "^6.1.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
+    "identity-obj-proxy": "^3.0.0",
     "path": "^0.12.7",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^1.2.1",
+    "svg-transform-loader": "^2.0.13",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
+    "url-loader": "^4.1.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
@@ -56,7 +65,7 @@
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "ramda": "^0.27.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
     "ts-jest": "^26.3.0"
