--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development npx webpack --config webpack.config.js --mode development",
     "build:prod": "cross-env NODE_ENV=production npx webpack --config webpack.config.js --mode production",
-    "dev": "cross-env NODE_ENV=development node ./bin/development.js",
+    "dev": "cross-env NODE_ENV=development CLIENT_ID=tEnmcP62ZX80rQ node ./bin/development.js",
     "test": "jest"
   },
   "repository": {
