--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development npx webpack --config webpack.config.js --mode development",
     "build:prod": "cross-env NODE_ENV=production npx webpack --config webpack.config.js --mode production",
-    "dev": "cross-env NODE_ENV=development CLIENT_ID=tEnmcP62ZX80rQ node ./bin/development.js",
+    "dev": "cross-env NODE_ENV=development node ./bin/development.js",
     "test": "jest"
   },
   "repository": {
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/dm-webdev/skillbox-react#readme",
   "devDependencies": {
-    "@hot-loader/react-dom": "^16.13.0",
+    "@hot-loader/react-dom": "^16.14.0",
     "@types/classnames": "^2.2.11",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -38,18 +38,18 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "file-loader": "^6.1.0",
-    "html-loader": "^1.3.0",
-    "html-webpack-plugin": "^4.4.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
     "identity-obj-proxy": "^3.0.0",
     "path": "^0.12.7",
-    "react-hot-loader": "^4.12.21",
-    "style-loader": "^1.2.1",
+    "react-hot-loader": "^4.13.0",
+    "style-loader": "^1.3.0",
     "svg-transform-loader": "^2.0.13",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
+    "ts-loader": "^8.0.8",
+    "typescript": "^4.0.5",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0",
@@ -57,17 +57,19 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
-    "@types/jest": "^26.0.13",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
+    "@types/jest": "^26.0.15",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
-    "jest": "^26.4.2",
-    "nodemon": "^2.0.4",
+    "jest": "^26.6.3",
+    "minimist": "^1.2.5",
+    "nodemon": "^2.0.6",
     "ramda": "^0.27.1",
     "react": "^16.14.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-favicon": "0.0.18",
-    "ts-jest": "^26.3.0"
+    "ts-jest": "^26.4.3",
+    "url-regex": "^5.0.0"
   }
 }
