--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/jest": "^26.0.15",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "jest": "^26.6.3",
