--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/classnames": "^2.2.11",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/react-redux": "^7.1.11",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
@@ -45,6 +46,9 @@
     "identity-obj-proxy": "^3.0.0",
     "path": "^0.12.7",
     "react-hot-loader": "^4.13.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^1.3.0",
     "svg-transform-loader": "^2.0.13",
     "ts-loader": "^8.0.8",
@@ -71,7 +75,9 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-favicon": "0.0.18",
+    "react-redux": "^7.2.2",
     "ts-jest": "^26.4.3",
     "url-regex": "^5.0.0"
-  }
+  },
+  "proxy": "http://localhost:9000"
 }
