--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/jest": "^26.0.15",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
@@ -78,6 +79,7 @@
     "react-favicon": "0.0.18",
     "react-hook-form": "^6.10.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "ts-jest": "^26.4.3",
     "url-regex": "^5.0.0"
   },
