--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "This project was created to train the use of React technology.",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development npx webpack --config webpack.config.js --mode development",
-    "build:prod": "cross-env NODE_ENV=production npx webpack --config webpack.config.js --mode production",
+    "build": "cross-env NODE_ENV=production npx webpack --config webpack.config.js --mode production",
     "dev": "cross-env NODE_ENV=development node ./bin/development.js",
-    "test": "jest"
+    "test": "jest",
+    "start": "node ./dist/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +31,27 @@
     "url": "https://github.com/dm-webdev/skillbox-react/issues"
   },
   "homepage": "https://github.com/dm-webdev/skillbox-react#readme",
-  "devDependencies": {
+  "dependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.0",
+    "classnames": "^2.2.6",
+    "express": "^4.17.1",
+    "formik": "^2.2.6",
+    "jest": "^26.6.3",
+    "minimist": "^1.2.5",
+    "nodemon": "^2.0.6",
+    "ramda": "^0.27.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-favicon": "0.0.18",
+    "react-hook-form": "^6.10.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "ts-jest": "^26.4.3",
+    "url-regex": "^5.0.0",
     "@babel/preset-react": "^7.12.5",
     "@hot-loader/react-dom": "^16.14.0",
     "@types/classnames": "^2.2.11",
@@ -60,28 +84,6 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.5.2"
-  },
-  "dependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-router-dom": "^5.1.7",
-    "axios": "^0.21.0",
-    "classnames": "^2.2.6",
-    "express": "^4.17.1",
-    "formik": "^2.2.6",
-    "jest": "^26.6.3",
-    "minimist": "^1.2.5",
-    "nodemon": "^2.0.6",
-    "ramda": "^0.27.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-favicon": "0.0.18",
-    "react-hook-form": "^6.10.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "ts-jest": "^26.4.3",
-    "url-regex": "^5.0.0"
   },
   "proxy": "http://localhost:9000"
 }
