--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": "14.x"
   },
   "scripts": {
-    "build:dev": "cross-env SECRET=WdtP8Xgim-btpjaKsgi7smwRdawUHQ NODE_ENV=development npx webpack --config webpack.config.js --mode development",
-    "build": "cross-env NODE_ENV=production npx webpack --config webpack.config.js --mode production",
+    "build:dev": "cross-env NODE_ENV=development npx webpack --config webpack.config.js --mode development",
     "dev": "cross-env NODE_ENV=development node ./bin/development.js",
     "test": "jest",
-    "start": "node SECRET=Jd3n_CIKmzYxmSwTqmioMdLpH9bpiw ./dist/server/server.js"
+    "build": "cross-env NODE_ENV=production npx webpack --config webpack.config.js --mode production",
+    "start": "node ./dist/server/server.js"
   },
   "repository": {
     "type": "git",
