--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
+    "compression": "^1.7.4",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
@@ -53,6 +54,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "formik": "^2.2.6",
+    "helmet": "^4.4.1",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "identity-obj-proxy": "^3.0.0",
